# labs

3lab/повышенное/: 10.py  4.py
3lab/среднее/: 2.py  6.py  8.py
5lab/: 2.py  6.py  8.py
6lab/: 2.py  6,8.py
6lab/templates/: form.html  result.html
7lab/: 2.py  lab7.db
8lab/: .flake8  .flake8.txt  .pre-commit-config.yaml.txt  2.py  8.py  pyproject.toml
8lab/src/8lab/: 2.py
