[project]
name = "8lab"
version = "0.1.0"
description = "Лабораторная работа №8"
authors = [
    {name = "Darmidon4ik",email = "d4rmidon4ik@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)"
]
